# custom-antigravity-cosense-rag

./: .cursorrules  .env.example  .gitignore  Makefile  README.md  architecture.md  compose.yaml  ruff.toml
batch/: Dockerfile  main.py  pyproject.toml  setup_index.py  test_main.py
batch/app/: logger.py  main.py  setup_index.py
batch/tests/: test_main.py
elasticsearch/: Dockerfile
encoder/: Dockerfile  debug_tokenizer.py  main.py  pyproject.toml  test_main.py
encoder/app/: main.py
encoder/tests/: test_main.py
search-api/: .dockerignore  Dockerfile  main.py  pyproject.toml
search-api/app/: main.py
search-api/tests/: test_main.py
skills/cosense-ingestion/: SKILL.md
skills/elasticsearch-rag/: SKILL.md
skills/ollama-generation/: SKILL.md
skills/splade-encoding/: SKILL.md
ui/: .dockerignore  package-lock.json  package.json
ui/src/: App.tsx  index.css
