[project]
name = "encoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.131.0",
    "fugashi>=1.5.2",
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "unidic-lite>=1.0.8",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
